--- a/index.html
+++ b/index.html
@@ -138,12 +138,8 @@
                           <h5 class="modal-title" id="staticBackdropLabel">Canasta</h5>
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                        <div class="modal-body">
-                          <!-- Button trigger modal -->
-                          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#info">
-                            Modal
-                          </button>
-
+                        <div id="canasta" class="modal-body">
+                         
                         </div>
                         <div class="modal-footer">
                       <h1>Total: 20</h1>
