--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                          
                         </div>
                         <div class="modal-footer">
-                      <h1>Total: 20</h1>
+                      <h1 id="totalCalories"></h1>
                         </div>
                       </div>
                     </div>
