--- a/index.html
+++ b/index.html
@@ -40,15 +40,9 @@
         </button>
         <div class="collapse navbar-collapse" id="topNavBar">
           <form class="d-flex ms-auto my-3 my-lg-0">
-            <div class="input-group">
-              <input
-                class="form-control"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-primary" type="submit">
-                <i class="bi bi-search"></i>
+            <div >
+              <button  type="submit">
+                <i class="bi bi-cart4"></i>
               </button>
             </div>
           </form>
@@ -95,13 +89,13 @@
       <div class="container-fluid">
         
         <div class="row justify-content-center">
-            <div class="col-md-5 mb-3">
+            <div class="col-md-4 mb-3">
               <div class="card h-100">
                 <div class="card-header text-center">
                   <h1>
                   <span class="me-2"><i class="bi bi-food"></i></span>
                   Foods
-                </h1>
+                      </h1>
                 </div>
                 <div class="card-body">
                         <div class="input-group">
@@ -110,7 +104,7 @@
                             <i class="bi bi-search"></i>
                           </button>
                         </div>
-                        <div class="container">
+                        <div class="container1">
             
                         </div>
                         <canvas id="information"></canvas>
@@ -179,7 +173,6 @@
                 Grafica
               </div>
               <div class="card-body">
-                <canvas class="chart" width="400" height="200"></canvas>
               </div>
             </div>
           </div>
