--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <i class="bi bi-search"></i>
                           </button>
                         </div>
-                        <div class="container1">
+                        <div id="container">
             
                         </div>
                         <canvas id="information"></canvas>
