--- a/index.html
+++ b/index.html
@@ -126,21 +126,21 @@
                   <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-scrollable">
                       <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title" id="staticBackdropLabel">Canasta</h5>
+                        <div class="modal-header text-center">
+                          <h1 class="modal-title text-align center" id="staticBackdropLabel">Canasta</h1>
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div id="canasta" class="modal-body">
                          
                         </div>
                         <div class="modal-footer">
-                      <h1 id="totalCalories"></h1>
+                      <h3 id="totalCalories"></h3>
                         </div>
                       </div>
                     </div>
                   </div>
                   <!--Modal Info-->
-                  <div class="modal fade" id="info" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                  <div class="modal fade" id="info" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="infoLabel" aria-hidden="true">
                     <div class="modal-dialog modal-xl">
                       <div class="modal-content">
                         <div class="modal-header">
