added function to delete basket

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         </button>
         <div class="collapse navbar-collapse" id="topNavBar">
           <form class="d-flex ms-auto my-3 my-lg-0">
-            <div >
+            <div onclick="renderBasket()">
               <a href="#" role="button" >
-                <i class="bi bi-basket-fill " data-bs-target="#staticBackdrop" data-bs-toggle="modal"></i>
+                <i  class="bi bi-basket-fill " data-bs-target="#staticBackdrop" data-bs-toggle="modal"></i>
               </a>
             </div>
           </form>
@@ -188,5 +188,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha256-CjSoeELFOcH0/uxWu6mC/Vlrc1AARqbm/jiiImDGV3s=" crossorigin="anonymous"></script>
 
     <script src="./js/app.js"></script>
+    
   </body>
 </html>
