--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <div class="card-header">
                 <span class="me-2"><i></i></span>
                 <h3 class="text-center ">Calorie counter</h3>
-
+                <div id="totalCal"></div>
               </div>
               <div class="card-body">
                 
