--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <!-- Bootstrap JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha256-CjSoeELFOcH0/uxWu6mC/Vlrc1AARqbm/jiiImDGV3s=" crossorigin="anonymous"></script>
 
-    <script src="./js/app.js"></script>
+    <script type="commonjs" src="./js/app.js"></script>
     
   </body>
 </html>
