--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </button>
         <div class="collapse navbar-collapse" id="topNavBar">
           <form class="d-flex ms-auto my-3 my-lg-0">
-            <div onclick="renderBasket();renderTotal()">
+            <div id="basket">
               <a href="#" role="button" >
                 <i  class="bi bi-basket-fill " data-bs-target="#staticBackdrop" data-bs-toggle="modal"></i>
               </a>
@@ -102,8 +102,8 @@
                 </div>
                 <div class="card-body">
                         <div class="input-group">
-                          <input class="form-control" type="search" onkeypress="getData()" id="form1" placeholder="Search" aria-label="Search"/>
-                          <button type="button" onclick="getData()" class="btn btn-primary" type="submit">
+                          <input class="form-control" type="search" id="form1" placeholder="Search" aria-label="Search"/>
+                          <button id="boton" type="button" class="btn btn-primary">
                             <i class="bi bi-search"></i>
                           </button>
                         </div>
@@ -140,7 +140,7 @@
                         <div class="row">
                             
                           <div class="col-xl-6">
-                            <a href="" onclick="eraseAll()" class="btn btn-danger float-left "
+                            <a id="eraser" href="" class="btn btn-danger float-left "
                             role="button" aria-pressed="true"><i class="bi bi-trash"></i></a>
                             </div>
                             <div class="col-xl-6">
@@ -203,7 +203,7 @@
     <!-- Bootstrap JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha256-CjSoeELFOcH0/uxWu6mC/Vlrc1AARqbm/jiiImDGV3s=" crossorigin="anonymous"></script>
 
-    <script src="./js/app.js"></script>
+    <script type="module" src="./js/app.js"></script>
     
   </body>
 </html>
